--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,20 +1,24 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #sideNav mode="over" opened="false" [position]="sidenavPosition">
-      <div id="user-info-sidebar">
-        <button mat-fab (click)="sideNav.toggle()" class="back-button" color="primary">
-          <mat-icon>arrow_right_alt</mat-icon>
+  <mat-sidenav #sideNav mode="over" opened="false" [position]="sidenavPosition">
+    <div id="user-info-sidebar">
+      <button mat-fab (click)="sideNav.toggle()" class="back-button" color="primary">
+        <mat-icon>arrow_right_alt</mat-icon>
+      </button>
+      <webui-current-user (close)="sideNav.toggle()"></webui-current-user>
+      <div>
+        <button (click)="http.signOut()" mat-raised-button color="primary">
+          <mat-icon>exit_to_app</mat-icon> Вихід
         </button>
-        <webui-current-user (close)="sideNav.toggle()"></webui-current-user>
-        <div>
-          <button (click)="http.signOut()" mat-raised-button color="primary"><mat-icon>exit_to_app</mat-icon> Вихід</button>
-        </div>
       </div>
-    </mat-sidenav>
-    <mat-toolbar color="primary">
-      <mat-toolbar color="primary" class="button-container">
-        <button class='current-user-icon' (click)="sideNav.toggle()" mat-fab color="grey"><mat-icon>person</mat-icon></button>
-      </mat-toolbar>
+    </div>
+  </mat-sidenav>
+  <mat-toolbar color="primary">
+    <mat-toolbar color="primary" class="button-container">
+      <webui-theme-button></webui-theme-button>
+      <button class='current-user-icon' (click)="sideNav.toggle()" mat-fab color="grey">
+        <mat-icon>person</mat-icon>
+      </button>
     </mat-toolbar>
-    <ng-content></ng-content>
+  </mat-toolbar>
+  <ng-content></ng-content>
 </mat-sidenav-container>
-
