--- a/src/app/components/theme-button/theme-button.component.html
+++ b/src/app/components/theme-button/theme-button.component.html
@@ -1,3 +1,3 @@
 <div class="theme-resolver">
-  <button mat-button (click)="showThemePicker()">Змінити тему</button>
+  <button mat-raised-button color="primary" (click)="showThemePicker()">Змінити тему</button>
 </div>
