--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,20 +8,20 @@
         <h1 class="mat-h1 mat-headline">Вхід в систему</h1>
         <p>
           <mat-form-field>
-            <input type="text" matInput placeholder="Login" formControlName="username"/>
+            <input type="text" matInput placeholder="Login" formControlName="username" />
             <mat-icon matSuffix>person</mat-icon>
           </mat-form-field>
         </p>
 
         <p>
           <mat-form-field>
-            <input type="password" matInput placeholder="Password" formControlName="password" autocomplete="off"/>
+            <input type="password" matInput placeholder="Password" formControlName="password" autocomplete="off" />
             <mat-icon matSuffix>lock</mat-icon>
           </mat-form-field>
         </p>
 
         <div class="button">
-          <button type="submit" mat-flat-button [disabled]="!login.valid">Sign In</button>
+          <button type="submit" mat-flat-button color="primary" [disabled]="!login.valid">Sign In</button>
         </div>
       </form>
     </div>
