--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -4,6 +4,7 @@ $half-dark: rgba(
   $alpha: 1
 );
 
+
 .background {
   height: 100vh;
   width: 100vw;
@@ -26,6 +27,7 @@ figure {
   display: flex;
   justify-content: center;
   position: relative;
+  z-index: 2;
   max-width: 300px;
   margin: 0.6rem;
   align-self: center;
@@ -34,19 +36,32 @@ figure {
 }
 
 .substrate {
-  background-color: rgba($color: #ffffff, $alpha: 0.4);
   height: 100%;
-  color: black;
+  color: var(--font-color);
   display: flex;
   width: 100%;
   justify-content: center;
+  position: relative;
+  z-index: 2;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--light-color);
+    opacity: .55;
+    z-index: 1;
+  }
 }
 
 .logotype {
   width: 150px;
 }
 .mat-h1 {
-  color: rgba($color: black, $alpha: 0.7);
+  color: var(--font-color);
   font-size: 24px;
 }
 
@@ -66,13 +81,8 @@ mat-form-field {
   justify-content: flex-end;
 
   button {
-    background-color: $half-dark;
-    color: white;
-    &:hover {
-      background-color: #8d4efc;
+    transition: .25s;
 
-      color: $font-color;
-    }
     &:disabled {
       background-color: #cccccc;
       color: #666666;
@@ -101,3 +111,4 @@ mat-form-field {
     padding: 6rem;
   }
 }
+
