--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "assets/scss/gridsets";
+@import "./assets/mat-themes/light-theme.scss";
+@import "./assets/mat-themes/night-theme.scss";
+@import "./assets/mat-themes/medium-theme.scss";
 
+%material-theme-defaults {
+  min-height: 100vh;
+  .mat-drawer-side {
+    border-right: none !important;
+  }
+
+    mat-sidenav-container, mat-sidenav-content {
+      min-height: 100vh;
+    }
+}
 
 *{
     margin: 0;
@@ -10,6 +23,22 @@
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.dayTheme {
+  @include angular-material-theme($my-day-theme);
+  @extend %material-theme-defaults;
+}
+    
+
+.nightTheme {
+  @include angular-material-theme($my-night-theme);
+  @extend %material-theme-defaults;
+}
+
+.morningTheme {
+  @include angular-material-theme($my-morning-theme);
+  @extend %material-theme-defaults;
+}
 
 %notification {
   color: white;
