--- a/src/app/pages/students/load-students/load-students.component.html
+++ b/src/app/pages/students/load-students/load-students.component.html
@@ -13,8 +13,11 @@
     [matAutocomplete]="auto"
   />
   <mat-autocomplete #auto="matAutocomplete">
-    <!-- <mat-option *ngFor="let class of classesData.studentClasses | async">
-      {{ class.id }}
-    </mat-option> -->
+    <mat-option
+      (click)="onClassSelect(class.id)"
+      *ngFor="let class of classesData"
+    >
+      {{ class.className }}
+    </mat-option>
   </mat-autocomplete>
 </mat-form-field>
