--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -2,7 +2,9 @@
   <div class="students-heading"><h3>Список учнів</h3></div>
 
   <div class="search">
-    <webui-load-students></webui-load-students>
+    <webui-load-students
+      (selectClassEvent)="setId($event)"
+    ></webui-load-students>
   </div>
   <webui-create-student></webui-create-student>
   <div class="search">
@@ -54,7 +56,10 @@
             element == expandedElement ? 'expanded' : 'collapsed'
           "
         >
-          <webui-update-student [student]="element"></webui-update-student>
+          <webui-update-student
+            *ngIf="expandedElement == element"
+            [student]="element"
+          ></webui-update-student>
         </div>
       </td>
     </ng-container>
