--- a/src/app/containers/classes/classes.component.html
+++ b/src/app/containers/classes/classes.component.html
@@ -15,7 +15,8 @@
                 </mat-expansion-panel-header>
                 <table mat-table [dataSource]="activeClass.value" multiTemplateDataRows>
                     <ng-container matColumnDef="{{actClass}}" *ngFor="let actClass of displayedColumns">
-                        <th mat-header-cell *matHeaderCellDef> {{classTableHead(actClass)}} </th>
+                        <!-- classListHeader pipe chanes table header names from eng to ua language -->
+                        <th mat-header-cell *matHeaderCellDef> {{actClass | classListHeader}} </th>
                         <td mat-cell *matCellDef="let class"> {{class[actClass]}} </td>
                     </ng-container>
                     <ng-container matColumnDef="expandedDetail">
@@ -51,7 +52,8 @@
                 </mat-expansion-panel-header>
                 <table mat-table [dataSource]="nonActiveClass.value" multiTemplateDataRows>
                     <ng-container matColumnDef="{{nonActClass}}" *ngFor="let nonActClass of displayedColumns">
-                        <th mat-header-cell *matHeaderCellDef> {{nonActClass}} </th>
+                        <!-- classListHeader pipe chanes table header names from eng to ua language -->
+                        <th mat-header-cell *matHeaderCellDef> {{nonActClass | classListHeader}} </th>
                         <td mat-cell *matCellDef="let class"> {{class[nonActClass]}} </td>
                     </ng-container>
                     <ng-container matColumnDef="expandedDetail">
