classes loading works

--- a/src/app/pages/students/load-students/load-students.component.html
+++ b/src/app/pages/students/load-students/load-students.component.html
@@ -1,4 +1,4 @@
-<div>Виберіть список класів:</div>
+<div class="class-select-header">Оберіть список класів:</div>
 <mat-radio-group (change)="onChange($event)" labelPosition="after">
   <mat-radio-button value="active" checked>Активні</mat-radio-button>
   <mat-radio-button value="nonactive">Не активні</mat-radio-button>
@@ -7,7 +7,7 @@
 <mat-form-field class="example-full-width">
   <input
     type="text"
-    placeholder="Виберіть клас"
+    placeholder="Оберіть клас"
     aria-label="Number"
     matInput
     [matAutocomplete]="auto"
@@ -15,7 +15,8 @@
   <mat-autocomplete #auto="matAutocomplete">
     <mat-option
       (click)="onClassSelect(class.id)"
-      *ngFor="let class of classesData"
+      *ngFor="let class of classesList"
+      [value]="class.className"
     >
       {{ class.className }}
     </mat-option>
