--- a/src/app/components/teacher-nav/teacher-nav.component.html
+++ b/src/app/components/teacher-nav/teacher-nav.component.html
@@ -2,6 +2,7 @@
     <mat-menu #menu="matMenu">
       <button mat-menu-item routerLink="/teacher/journal">Журнали</button>
       <button mat-menu-item routerLink="/teacher/statistics">Статистика</button>
+      <button mat-menu-item routerLink="/teacher/subjects">Предмети</button>
     </mat-menu>
 
       
