--- a/src/app/containers/teacher-panel-journals/teacher-panel-journals.component.scss
+++ b/src/app/containers/teacher-panel-journals/teacher-panel-journals.component.scss
@@ -1,6 +1,6 @@
 .main-container {
     width: 100%;
-    height: 400px;//this value is temporary
+    min-height: 100vh;
   }
   .header {
     display: flex;
