--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -1,5 +1,13 @@
 <div class="heading">
   <div class="students-heading"><h3>Список учнів</h3></div>
+</div>
+<div class="heading">
+  <div class="search">
+    <webui-load-students
+      (selectClassEvent)="setId($event)"
+    ></webui-load-students>
+  </div>
+  <webui-create-student [idOfClass]="classId"></webui-create-student>
   <div class="search">
     <mat-form-field>
       <input
@@ -9,7 +17,6 @@
       />
     </mat-form-field>
   </div>
-  <webui-create-student></webui-create-student>
 </div>
 
 <div class="div-table mat-elevation-z8">
@@ -50,7 +57,10 @@
             element == expandedElement ? 'expanded' : 'collapsed'
           "
         >
-          <webui-update-student [student]="element"></webui-update-student>
+          <webui-update-student
+            *ngIf="element == expandedElement"
+            [student]="element"
+          ></webui-update-student>
         </div>
       </td>
     </ng-container>
