--- a/src/app/containers/teacher-panel-subjects/teacher-panel-subjects.component.html
+++ b/src/app/containers/teacher-panel-subjects/teacher-panel-subjects.component.html
@@ -2,7 +2,7 @@
 
   <!-- Header -->
   <div class="header mat-elevation-z5">
-      <div><h3> Перелік предметів, які Ви викладаєте: </h3></div>
+      <div><h3> Перелік предметів, які Ви викладаєте </h3></div>
   </div>
   
   <!-- Table -->
