--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,19 +1,11 @@
-$font-color: #fff;
-$half-dark: rgba(
-  $color: #3762d3,
-  $alpha: 1
-);
-
-.background {
-  height: 100vh;
-  width: 100vw;
-  background-size: cover;
-  background-image: url("../../../assets/images/shutterstock_1068141515.jpg");
+.substrate {
+  background-color: rgba($color: #ffffff, $alpha: 0.4);
+  height: 100%;
+  color: black;
   display: flex;
-  align-items: center;
+  width: 100%;
   justify-content: center;
-  position: relative;
-  padding: 0 !important;
+  flex-direction: column;
 }
 
 figure {
@@ -33,61 +25,20 @@ figure {
   margin-top: -20% !important;
 }
 
-.substrate {
-  background-color: rgba($color: #ffffff, $alpha: 0.4);
-  height: 100%;
-  color: black;
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-
 .logotype {
   width: 150px;
 }
-.mat-h1 {
-  color: rgba($color: black, $alpha: 0.7);
-  font-size: 24px;
-}
 
-mat-form-field {
-  width: 100%;
-  min-width: 300px;
-}
-
-.error {
-  padding: 16px;
-  color: white;
-  background-color: rgba(255, 0, 0, 0.2);
-}
-
-.button {
+.background {
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-image: url("../../../assets/images/shutterstock_1068141515.jpg");
   display: flex;
-  justify-content: flex-end;
-
-  button {
-    background-color: $half-dark;
-    color: white;
-    &:hover {
-      background-color: #8d4efc;
-
-      color: $font-color;
-    }
-    &:disabled {
-      background-color: #cccccc;
-      color: #666666;
-    }
-  }
-}
-
-@media only screen and (min-width: 576px) {
-  .form-block {
-    margin: 5rem;
-    margin-top: -10% !important;
-  }
-  .substrate {
-    width: auto;
-  }
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 0 !important;
 }
 
 @media only screen and (min-width: 768px) {
@@ -96,8 +47,10 @@ mat-form-field {
   }
 }
 
-@media (min-width: 992px) {
-  .form-block {
-    padding: 6rem;
+@media only screen and (min-width: 576px) {
+  .substrate {
+    width: auto;
   }
 }
+
+
