--- a/src/app/containers/classes/classes.component.html
+++ b/src/app/containers/classes/classes.component.html
@@ -2,6 +2,10 @@
     <h3>Список класів</h3>
 </div>
 
+<div class="mainExpansion">
+    <webui-create-class></webui-create-class>
+</div>
+
 <mat-accordion>
     <mat-expansion-panel hideToggle class="mainExpansion">
         <mat-expansion-panel-header>
