--- a/src/app/pages/students/load-students/load-students.component.scss
+++ b/src/app/pages/students/load-students/load-students.component.scss
@@ -1,8 +1,15 @@
 .class-select-header {
   text-align: center;
-  margin-top: 5%;
+  margin-top: 2%;
 }
 .choose-class-container {
   display: flex;
   flex-direction: column;
+}
+.justify {
+  width: 22%;
+  margin: 0 auto;
+  mat-radio-button {
+    margin: 0 1%;
+  }
 }
