--- a/src/app/components/journal-table/journal-table.component.html
+++ b/src/app/components/journal-table/journal-table.component.html
@@ -1,67 +1,65 @@
 <div class="header mat-elevation-z5">
-    <div><h3>{{journal.subjectName}}. {{journal.className}} клас.</h3></div>
+    <div>
+        <h3>{{journal.subjectName}}. {{journal.className}} клас.</h3>
+    </div>
 </div>
+<div *ngIf="marksList && homeworkListArray.length && journalArray.length; else spinner">
+    <mat-table [dataSource]="journalDataTable" class="mat-elevation-z8">
+        <ng-container matColumnDef="fullName" sticky>
+            <th mat-header-cell *matHeaderCellDef class="fullName"> Учень </th>
+            <td mat-cell *matCellDef="let element" class="fullName">
+                {{element.studentFullName}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef>Домашнє завдання</td>
+        </ng-container>
 
-<mat-table [dataSource]="journalDataTable" class="mat-elevation-z8">
-    <ng-container matColumnDef="fullName" sticky>
-        <th mat-header-cell *matHeaderCellDef class="fullName"> Учень </th>
-        <td mat-cell *matCellDef="let element" class="fullName">
-            {{element.studentFullName}}
-        </td>
-        <td mat-footer-cell *matFooterCellDef>Домашнє завдання</td>
-    </ng-container>
-
-    <ng-container *ngFor="let date of tableDates; let i=index" [matColumnDef]="date">
-        <th mat-header-cell *matHeaderCellDef
-            [ngClass]="{'hovered': hoveredLessonDate === date}"
-            (mouseenter)="hoveredLessonDate = date">
+        <ng-container *ngFor="let date of tableDates; let i=index" [matColumnDef]="date">
+            <th mat-header-cell
+                *matHeaderCellDef
+                [ngClass]="{'hovered': hoveredLessonDate === date}"
+                (mouseenter)="hoveredLessonDate = date"
+                (mouseout)="hoveredLessonDate = null"
+            >
                 {{date | journalDateFormat}}
-        </th>
-        <td mat-cell *matCellDef="let element"
-            [ngClass]="{'hovered': hoveredLessonDate === element.marks[i].dateMark}"
-            (mouseenter)="hoveredLessonDate = element.marks[i].dateMark"
-            (click)="setLessonIdToStore(element.marks[i]);
+            </th>
+            <td mat-cell
+                *matCellDef="let element"
+                [ngClass]="{'hovered': hoveredLessonDate === element.marks[i].dateMark}"
+                (mouseenter)="hoveredLessonDate = element.marks[i].dateMark"
+                (mouseout)="hoveredLessonDate = null"
+                (click)="setLessonIdToStore(element.marks[i]);
                     chosenElement = element;
                     chosenLesson = element.marks[i];
                     getPosition($event);
                     markFieldVisible = true">
                 {{element.marks[i].mark}}
-        </td>
-        <td mat-footer-cell *matFooterCellDef
-            (mouseenter)="hoveredLessonDate = date">
-          <mat-icon
-            (click)="downloadFile(journalArray[0].marks[i].idLesson)"
-            title="Завантажити"
-          >
-            save_alt
-          </mat-icon>
+            </td>
+            <td mat-footer-cell
+                *matFooterCellDef
+                class="footer"
+                (mouseenter)="hoveredLessonDate = date"
+                (mouseout)="hoveredLessonDate = null"
+            >
+                <webui-journal-homework-dialog [lessonData]="{idClass: journal.idClass,
+                                           idSubject: journal.idSubject,
+                                           idLesson: journalArray[0].marks[i].idLesson,
+                                           homework: homeworkListArray[i]}">
+                </webui-journal-homework-dialog>
+            </td>
 
-<!--          *ngIf="data.homeworkFileId !== null"-->
-          <mat-icon
-            (click)="openFile(journalArray[0].marks[i].idLesson)"
-            title="Переглянути"
-          >
-            zoom_in
-          </mat-icon>
-          <input type="file" #inputFile id="file" (change)="selectFile($event)" [hidden]="true">
-          <mat-card-actions>
-            <button mat-stroked-button type="button" (click)="inputFile.click()">Вибрати фото</button>
-          </mat-card-actions>
+        </ng-container>
 
-          <span>{{name}}</span>
-        </td>
-<!--                <webui-journal-homework-dialog-->
-<!--                    [lessonData]="{idClass: journal.idClass,-->
-<!--                        idSubject: journal.idSubject,-->
-<!--                        idLesson: journalArray[0].marks[i].idLesson}">-->
-<!--                </webui-journal-homework-dialog>-->
+        <tr mat-header-row *matHeaderRowDef="tableHeaders"></tr>
+        <tr mat-row *matRowDef="let student; columns: tableHeaders"></tr>
+        <tr mat-footer-row *matFooterRowDef="tableHeaders"></tr>
+    </mat-table>
+</div>
 
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="tableHeaders"></tr>
-    <tr mat-row *matRowDef="let student; columns: tableHeaders"></tr>
-    <tr mat-footer-row *matFooterRowDef="tableHeaders"></tr>
-</mat-table>
+<ng-template #spinner>
+    <div class="spinner-container">
+        <mat-spinner class="count-bar-spinner"></mat-spinner>
+    </div>
+</ng-template>
 
 <div class="mark-field"
     *ngIf="markFieldVisible"
@@ -72,17 +70,20 @@
         <mat-form-field>
             <input matInput
                 type="number"
+                #markInput
                 min="1"
                 max="12"
                 [value]="chosenLesson.mark ? chosenLesson.mark : null"
                 placeholder="Оцінка"
+                autofocus
             >
         </mat-form-field>
         <mat-form-field>
             <mat-label>Тип оцінки</mat-label>
-            <mat-select [value]="chosenLesson.typeMark ? chosenLesson.typeMark : null">
-                <mat-option *ngFor="let mark of getMarksList$ | async"
-                    [value]="mark.markType">
+            <mat-select #markTypeSelect
+                [value]="chosenLesson.typeMark ? chosenLesson.typeMark : null"
+            >
+                <mat-option *ngFor="let mark of marksList$ | async" [value]="mark.markType">
                     {{mark.markType}}
                 </mat-option>
             </mat-select>
@@ -90,7 +91,7 @@
         <mat-form-field>
             <textarea matInput
                 name="mark-note"
-                id="mark-note"
+                #markNote
                 rows="2"
                 [value]="chosenLesson.note ? chosenLesson.note : null"
                 placeholder="Коментар до оцінки"
@@ -98,7 +99,23 @@
             </textarea>
         </mat-form-field>
         <button mat-button
-            (click)="markFieldVisible=false">Скасувати</button>
-        <button mat-button>Зберегти</button>
+            (click)="markFieldVisible=false"
+        >
+            Скасувати
+        </button>
+        <button mat-button
+            type="button"
+            (click)="markFieldVisible=false;
+                saveMark(
+                    markInput.value,
+                    markTypeSelect.value,
+                    markNote.value,
+                    chosenElement.idStudent,
+                    chosenLesson.idLesson
+                )"
+            [disabled]="!markTypeSelect.value || !markInput.value"
+        >
+            Зберегти
+        </button>
     </form>
 </div>
