--- a/src/app/components/journal-homework-dialog/journal-homework-dialog.component.html
+++ b/src/app/components/journal-homework-dialog/journal-homework-dialog.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="lessonData.homework.fileName">
+<div *ngIf="lessonData && lessonData.homework && lessonData.homework.fileName">
     <mat-icon (click)="openFile(lessonData.idLesson)" title="Переглянути вкладення">
         zoom_in
     </mat-icon>
@@ -9,21 +9,21 @@
         attach_file
     </mat-icon>
 </div>
-<mat-icon *ngIf="!lessonData.homework.fileName"
+<mat-icon *ngIf="!(lessonData && lessonData.homework && lessonData.homework.fileName)"
     class="add-homework"
     (click)="inputFile.click()"
     title="Додати файл"
 >
     attach_file
 </mat-icon>
-<mat-icon *ngIf="!lessonData.homework.homework"
+<mat-icon *ngIf="!(lessonData && lessonData.homework && lessonData.homework.homework)"
     class="add-homework"
     (click)="getPosition($event); hometaskVisible=true"
     title="Додати текс завдання"
 >
     post_add
 </mat-icon>
-<mat-icon *ngIf="lessonData.homework.homework"
+<mat-icon *ngIf="lessonData && lessonData.homework && lessonData.homework.homework"
     (click)="getPosition($event); hometaskVisible=true"
     title="Переглянути текст завдання"
 >
